# DevPilot

./: .env.example  .gitignore  DevPilot_SRS_v1.0.docx  README.md  main.py  mcp_servers.json  pyproject.toml  requirements.txt  srs_content.txt
agent/: __init__.py  a2a_client.py  a2a_server.py  cli.py  config.py  context.py  history.py  loop.py  mcp_client.py  setup_wizard.py  ui.py  vector_index.py
agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  system_prompt.py
agent/tools/: a2a.py  base.py  diagram.py  doc_gen.py  fs.py  git_ops.py  memory_store.py  registry.py  search_code.py  semantic_search.py  shell.py  web_search.py
agent/tui/: __init__.py  app.py
devpilot_agentic_cli-1.0.0/agent/tools/: __init__.py
tests/: test_config.py  test_e2e.py  test_history.py  test_loop.py  test_providers.py  test_setup_wizard.py  test_tools.py
