[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devpilot"
version = "0.1.0"
description = "AI-Powered Terminal Coding Agent with MCP and A2A support"
authors = [{ name = "Thijesh Praveen V" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "tavily-python>=0.3.0",
    "GitPython>=3.1.40",
    "chromadb>=0.4.22",
    "markdown-it-py>=3.0.0",
    "pdfkit>=1.0.0",
    "pypdf>=4.0.0",
]

[project.scripts]
devpilot = "main:main"

[tool.setuptools]
packages = ["agent", "agent.providers", "agent.tools"]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
