[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devpilot-cli"
version = "1.0.0"
description = "Autonomous AI coding agent for your terminal — Claude, GPT-4o, Groq, Ollama, and more"
authors = [{ name = "Thijesh Praveen V" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "ai", "coding-agent", "cli", "llm",
    "anthropic", "openai", "groq", "ollama",
    "claude", "gpt4", "terminal", "agent",
    "mcp", "textual", "tui",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "rich>=13.7.0",
    "textual>=0.52.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "tavily-python>=0.3.0",
    "GitPython>=3.1.40",
    "markdown-it-py>=3.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
]

[project.urls]
Homepage = "https://github.com/Thijeshpraveen-V/DevPilot"
Repository = "https://github.com/Thijeshpraveen-V/DevPilot"
Issues = "https://github.com/Thijeshpraveen-V/DevPilot/issues"

[project.scripts]
devpilot = "agent.cli:main"

[tool.setuptools]
packages = ["agent", "agent.providers", "agent.tools", "agent.tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
